# CLI-cpp-project

./: CMakeLists.txt  README.md  Types.h  main.cpp
AbstractClasses/: Command.h  CommandError.h  InputStream.h  OutputStream.h
Commands/: BatchCommand.cpp  BatchCommand.h  DateCommand.cpp  DateCommand.h  EchoCommand.cpp  EchoCommand.h  HeadCommand.cpp  HeadCommand.h  PromptCommand.cpp  PromptCommand.h  RMCommand.cpp  RMCommand.h  TRCommand.cpp  TRCommand.h  TimeCommand.cpp  TimeCommand.h  TouchCommand.cpp  TouchCommand.h  TruncateCommand.cpp  TruncateCommand.h  WCCommand.cpp  WCCommand.h
InputStreams/: ConsoleInputStream.cpp  ConsoleInputStream.h  FileInputStream.cpp  FileInputStream.h  StringInputStream.cpp  StringInputStream.h
Main/: Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h
OutputStreams/: ConsoleOutputStream.cpp  ConsoleOutputStream.h  FileOutputStream.cpp  FileOutputStream.h  StringOutputStream.cpp  StringOutputStream.h
